# rust-wasm-object

./: .gitpod.Dockerfile  Cargo.toml  Makefile  README.md
src/: lib.rs
